--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"create project\"\"\"\n",
+    "\"\"\"create a project\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects',\n",
     "                       cookies=cookies,\n",
     "                       json={'project_name': 'test_project'})\n",
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"update project\"\"\"\n",
+    "\"\"\"rename a project\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project',\n",
     "                     cookies=cookies, \n",
     "                     json={'new_project_name': 'test_project_2'})\n",
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"delete project\"\"\"\n",
+    "\"\"\"delete a project\"\"\"\n",
     "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project_2',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
@@ -234,7 +234,7 @@
     "\"\"\"update local config\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/lconfigs',\n",
     "                     cookies=cookies,\n",
-    "                     data='language: zh')\n",
+    "                     data='recipe: default.v1\\nlanguage: zh\\n')\n",
     "print(r_put.json())"
    ]
   },
@@ -291,36 +291,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"update an intent\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/intents/intent_1',\n",
-    "                     cookies=cookies,\n",
-    "                     json={\"content\": {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1', 'entity_2']}})\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"update & rename an intent\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/intents/intent_1',\n",
     "                     cookies=cookies,\n",
-    "                     json={'new_name': 'intent_2', \"content\": {'examples': [{'text': 'string_1'}, {'text': 'string_2'}]}})\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"rename an intent\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/intents/intent_2',\n",
-    "                     cookies=cookies,\n",
-    "                     json={'new_name': 'intent_1'})\n",
+    "                     json={'new_name': 'intent_2', \"content\": {'examples': [{'text': 'string_1'}, {'text': 'string_2'}], 'use_entities': ['entity_1', 'entity_2']}})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -331,7 +305,7 @@
    "outputs": [],
    "source": [
     "\"\"\"delete an intent\"\"\"\n",
-    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/intents/intent_1',\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/intents/intent_2',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
    ]
@@ -389,19 +363,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"update a response\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/responses/response_1',\n",
-    "                     cookies=cookies,\n",
-    "                     json={\"content\": {'data': [{'text': 'string_1'}]}})\n",
-    "print(r_put.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"update & rename a response\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/responses/response_1',\n",
     "                     cookies=cookies,\n",
@@ -415,21 +376,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"rename a response\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/responses/response_2',\n",
-    "                     cookies=cookies,\n",
-    "                     json={'new_name': 'response_1'})\n",
-    "print(r_put.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"delete a response\"\"\"\n",
-    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/responses/response_1',\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/responses/response_2',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())"
    ]
@@ -487,27 +435,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"update an action\"\"\"\n",
-    "content = {\n",
-    "    \"content\": {\n",
-    "        \"blockly\": {},\n",
-    "        \"packages\": [],\n",
-    "        \"code\": \"\"\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/actions/action_1',\n",
-    "                     cookies=cookies,\n",
-    "                     json=content)\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"update & rename an action\"\"\"\n",
     "content = {\n",
     "    'new_name': 'action_2',\n",
@@ -529,21 +456,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"rename an action\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/actions/action_2',\n",
-    "                     cookies=cookies,\n",
-    "                     json={'new_name': 'action_1'})\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"delete an action\"\"\"\n",
-    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/actions/action_1',\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/actions/action_2',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
    ]
@@ -601,36 +515,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"update a synonym\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/synonyms/synonym_1',\n",
-    "                     cookies=cookies,\n",
-    "                     json={\"content\": {'examples': ['synonym_11']}})\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"update & rename a synonym\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/synonyms/synonym_1',\n",
     "                     cookies=cookies,\n",
-    "                     json={'new_name': 'synonym_2', \"content\": {'examples': ['synonym_111']}})\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"rename a synonym\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/synonyms/synonym_2',\n",
-    "                     cookies=cookies,\n",
-    "                     json={'new_name': 'synonym_1'})\n",
+    "                     json={'new_name': 'synonym_2', \"content\": {'examples': ['synonym_22']}})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -641,7 +529,7 @@
    "outputs": [],
    "source": [
     "\"\"\"delete a synonym\"\"\"\n",
-    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/synonyms/synonym_1',\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/synonyms/synonym_2',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
    ]
@@ -699,36 +587,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"update an entity\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/entities/entity_1',\n",
-    "                     cookies=cookies,\n",
-    "                     json={\"content\": {'roles': ['role_1', 'role_2']}})\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"update & rename an entity\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/entities/entity_1',\n",
     "                     cookies=cookies,\n",
-    "                     json={'new_name': 'entity_2', \"content\":{'groups': ['group_1', 'group_2']}})\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"rename an entity\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/entities/entity_2',\n",
-    "                     cookies=cookies,\n",
-    "                     json={'new_name': 'entity_1'})\n",
+    "                     json={'new_name': 'entity_2', \"content\":{'roles': ['role_1', 'role_2'], 'groups': ['group_1', 'group_2']}})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -739,7 +601,7 @@
    "outputs": [],
    "source": [
     "\"\"\"delete an entity\"\"\"\n",
-    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/entities/entity_1',\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/entities/entity_2',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
    ]
@@ -798,8 +660,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"update a slot\"\"\"\n",
+    "\"\"\"update & rename a slot\"\"\"\n",
     "content = {\n",
+    "    'new_name': 'slot_2',\n",
     "    \"content\": {\n",
     "        'type': 'text',\n",
     "        'mappings': [\n",
@@ -807,45 +670,9 @@
     "        ]\n",
     "    }\n",
     "}\n",
-    "\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/slots/slot_1',\n",
     "                     cookies=cookies,\n",
     "                     json=content)\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"update & rename a slot\"\"\"\n",
-    "content = {\n",
-    "    'new_name': 'slot_2',\n",
-    "    \"content\": {\n",
-    "        'type': 'any',\n",
-    "        'mappings': [\n",
-    "            {'type': 'custom'}\n",
-    "        ]\n",
-    "    }\n",
-    "}\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/slots/slot_1',\n",
-    "                     cookies=cookies,\n",
-    "                     json=content)\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"rename a slot\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/slots/slot_2',\n",
-    "                     cookies=cookies,\n",
-    "                     json={'new_name': 'slot_1'})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -856,9 +683,81 @@
    "outputs": [],
    "source": [
     "\"\"\"delete a slot\"\"\"\n",
-    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/slots/slot_1',\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/slots/slot_2',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Form API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"create a form\"\"\"\n",
+    "r_post = requests.post(url=f'{BASE_URL}/projects/test_project/forms',\n",
+    "                       cookies=cookies,\n",
+    "                       json={'name': 'form_1'})\n",
+    "print(r_post.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"get forms\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/forms',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/forms?mode=name',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"get a form\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/forms/form_1',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"update & rename a form\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/forms/form_1',\n",
+    "                     cookies=cookies,\n",
+    "                     json={'new_name': 'form_2', \"content\": {'required_slots': ['slot_1', 'slot_2'], 'ignored_intents': ['intent_1', 'intent_2']}})\n",
+    "print(r_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"delete a form\"\"\"\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/forms/form_2',\n",
+    "                           cookies=cookies)\n",
+    "print(r_delete.json())"
    ]
   },
   {
@@ -914,28 +813,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"update a story\"\"\"\n",
-    "content = {\n",
-    "    \"content\": {\n",
-    "        \"nodes\": [],\n",
-    "        \"edges\": [],\n",
-    "        \"position\": [],\n",
-    "        \"zoom\": 1\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/stories/story_1',\n",
-    "                     cookies=cookies,\n",
-    "                     json=content)\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"update & rename a story\"\"\"\n",
     "content = {\n",
     "    'new_name': 'story_2',\n",
@@ -943,25 +820,12 @@
     "        \"nodes\": [],\n",
     "        \"edges\": [],\n",
     "        \"position\": [],\n",
-    "        \"zoom\": 2\n",
+    "        \"zoom\": 1\n",
     "    }\n",
     "}\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/stories/story_1',\n",
     "                     cookies=cookies,\n",
     "                     json=content)\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"rename a story\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/stories/story_2',\n",
-    "                     cookies=cookies,\n",
-    "                     json={'new_name': 'story_1'})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -972,7 +836,7 @@
    "outputs": [],
    "source": [
     "\"\"\"delete a story\"\"\"\n",
-    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/stories/story_1',\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/stories/story_2',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
    ]
@@ -1031,35 +895,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"update a rule\"\"\"\n",
+    "\"\"\"update & rename a rule\"\"\"\n",
     "content = {\n",
+    "    'new_name': 'rule_2',\n",
     "    \"content\": {\n",
     "        \"nodes\": [],\n",
     "        \"edges\": [],\n",
     "        \"position\": [],\n",
     "        \"zoom\": 1\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "r_put = requests.put(\n",
-    "    f'{BASE_URL}/projects/test_project/rules/rule_1', cookies=cookies, json=content)\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"update & rename a rule\"\"\"\n",
-    "content = {\n",
-    "    'new_name': 'story_2',\n",
-    "    \"content\": {\n",
-    "        \"nodes\": [],\n",
-    "        \"edges\": [],\n",
-    "        \"position\": [],\n",
-    "        \"zoom\": 2\n",
     "    }\n",
     "}\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/rules/rule_1',\n",
@@ -1074,21 +917,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"rename a rule\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/rules/rule_2',\n",
-    "                     cookies=cookies,\n",
-    "                     json={'new_name': 'rule_1'})\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"delete a rule\"\"\"\n",
-    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/rules/rule_1',\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/rules/rule_2',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
    ]
@@ -1129,7 +959,7 @@
     "\"\"\"create a token\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/test_project/tokens',\n",
     "                       cookies=cookies,\n",
-    "                       json={'name': '測試', \"content\": {'frequency': 1}})\n",
+    "                       json={'name': '測試'})\n",
     "print(r_post.json())\n"
    ]
   },
@@ -1166,38 +996,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"update a token\"\"\"\n",
-    "\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/tokens/測試',\n",
-    "                     cookies=cookies,\n",
-    "                     json={\"content\": {'frequency': 2}})\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"update & rename a token\"\"\"\n",
     "\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/tokens/測試',\n",
     "                     cookies=cookies,\n",
-    "                     json={'new_name': '範例', \"content\": {'frequency': 3}})\n",
-    "print(r_put.json())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"rename a token\"\"\"\n",
-    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/tokens/範例',\n",
-    "                     cookies=cookies,\n",
-    "                     json={'new_name': '測試'})\n",
+    "                     json={'new_name': '範例', \"content\": {'frequency': 1}})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -1208,7 +1011,7 @@
    "outputs": [],
    "source": [
     "\"\"\"delete an action\"\"\"\n",
-    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/tokens/測試',\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/test_project/tokens/範例',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
    ]
