--- a/test/story.ipynb
+++ b/test/story.ipynb
@@ -9,7 +9,9 @@
     "import json\n",
     "\n",
     "with open('/home/pi/git/asar/api/data/asar_projects/rasa_bot/stories.json', 'r', encoding=\"utf-8\") as f:\n",
-    "    f_json = json.load(f)"
+    "    f_json = json.load(f)\n",
+    "    \n",
+    "# f_json={'心情問答2':f_json['心情問答']}"
    ]
   },
   {
@@ -69,7 +71,7 @@
     "            step = None\n",
     "            if node != 'start' and node != 'end':\n",
     "                step_type = input_nodes[node]['type']\n",
-    "                if step_type == 'intent' or step_type == 'action':\n",
+    "                if step_type == 'intent':\n",
     "                    step = {step_type: input_nodes[node]['name']}\n",
     "\n",
     "                    # entity\n",
@@ -86,17 +88,22 @@
     "                                entities.append(entity)\n",
     "                        if entities:\n",
     "                            step.update({'entities': entities})\n",
+    "                elif step_type == 'action':\n",
+    "                    step = {step_type: input_nodes[node]['name']}\n",
+    "                elif step_type == 'response':\n",
+    "                    step = {'action': f'utter_{input_nodes[node][\"name\"]}'}\n",
     "                elif step_type == 'slot_was_set':\n",
-    "                    step = {step_type: []}\n",
-    "\n",
-    "                    # slot\n",
-    "                    if input_nodes[node].get('slots'):\n",
+    "                    ss: list\n",
+    "                    if ss := input_nodes[node].get('slots'):\n",
     "                        slots = []\n",
     "                        s: dict\n",
-    "                        for s in input_nodes[node]['slots']:\n",
+    "                        for s in ss:\n",
     "                            if k := s.get('slot'):\n",
-    "                                slot = {k: s.get('value')}\n",
-    "                                slots.append(slot)\n",
+    "                                if 'value' in s:\n",
+    "                                    v = s.get('value')\n",
+    "                                    slots.append({k: v})\n",
+    "                                else:\n",
+    "                                    slots.append(k)\n",
     "                        if slots:\n",
     "                            step = {step_type: slots}\n",
     "            if step:\n",
