--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -1153,10 +1153,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Load a model(localhost)\"\"\"\n",
-    "resp = requests.put(url=f'http://127.0.0.1:5005/model',\n",
-    "                    json={'model_file': '/data/asar_projects/rasa_bot/output/rasa_bot.tar.gz'})\n",
-    "resp.status_code\n"
+    "# \"\"\"Load a model(localhost)\"\"\"\n",
+    "# resp = requests.put(url=f'http://127.0.0.1:5005/model',\n",
+    "#                     json={'model_file': '/data/asar_projects/rasa_bot/output/rasa_bot.tar.gz'})\n",
+    "# resp.status_code\n"
    ]
   },
   {
