--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -1177,6 +1177,32 @@
    "source": [
     "resp = requests.delete(url=f'http://rasa.lisontech.net/model')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import httpx, asyncio, datetime\n",
+    "async def request_async():\n",
+    "    async with httpx.AsyncClient() as client:\n",
+    "        print(datetime.datetime.now().isoformat())\n",
+    "        r = await client.post(url=f'{BASE_URL}/models',\n",
+    "                            cookies=cookies,\n",
+    "                            json={'project_name': 'rasa_bot'})\n",
+    "    return r.text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await asyncio.gather(request_async(),request_async())\n",
+    "# await request_async()\n"
+   ]
   }
  ],
  "metadata": {
