--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -172,7 +172,7 @@
     "\"\"\"rename a project\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project',\n",
     "                     cookies=cookies, \n",
-    "                     json={'new_project_name': 'test_project_2'})\n",
+    "                     json={'new_name': 'test_project_2'})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -1202,6 +1202,23 @@
    "source": [
     "await asyncio.gather(request_async(),request_async())\n",
     "# await request_async()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select(self, name: str) -> Tuple[dict, int, str, str]:\n",
+    "    # Validate\n",
+    "    _ = self.name_schema(name=name)\n",
+    "    # Implement\n",
+    "    content = self.content\n",
+    "    if name in content:\n",
+    "        return content[name], 200, 'success', 'OK'\n",
+    "    else:\n",
+    "        return {}, 400, 'success', 'OK'"
    ]
   }
  ],
