--- a/test/rpi.ipynb
+++ b/test/rpi.ipynb
@@ -2,35 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from RPLCD.i2c import CharLCD"
+    "from RPLCD.i2c import CharLCD\n",
+    "lcd = CharLCD('PCF8574', 0x27)\n",
+    "lcd.write_string('Hello world')\n",
+    "lcd.backlight_enabled=False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lcd = CharLCD('PCF8574', 0x27)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lcd.write_string('Hello world')"
+    "import RPi.GPIO as GPIO\n",
+    "import dht11\n",
+    "import time\n",
+    "\n",
+    "GPIO.setwarnings(True)\n",
+    "GPIO.setmode(GPIO.BCM)\n",
+    "\n",
+    "instance = dht11.DHT11(pin=24)\n",
+    "\n",
+    "try:\n",
+    "    while True:\n",
+    "        result = instance.read()\n",
+    "        if result.is_valid():\n",
+    "            print(f\"Temperature: {result.temperature}C\")\n",
+    "            print(f\"Humidity: {result.humidity}%\\n\")\n",
+    "        time.sleep(2)\n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"Cleanup\")\n",
+    "    GPIO.cleanup()\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit ('venv')",
+   "display_name": "Python 3.10.7 64-bit ('test')",
    "language": "python",
    "name": "python3"
   },
@@ -49,7 +61,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d5a93f04303b4b3c5a779331b74705a9d4021afccf2f818a1bfe8f9513487345"
+    "hash": "62c580e990a90871f330048dfcf5bd9142854bcc99e55c733aa78f77303bca76"
    }
   }
  },
