--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -1184,41 +1184,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import httpx, asyncio, datetime\n",
-    "async def request_async():\n",
-    "    async with httpx.AsyncClient() as client:\n",
-    "        print(datetime.datetime.now().isoformat())\n",
-    "        r = await client.post(url=f'{BASE_URL}/models',\n",
-    "                            cookies=cookies,\n",
-    "                            json={'project_name': 'rasa_bot'})\n",
-    "    return r.text\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "await asyncio.gather(request_async(),request_async())\n",
-    "# await request_async()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def select(self, name: str) -> Tuple[dict, int, str, str]:\n",
-    "    # Validate\n",
-    "    _ = self.name_schema(name=name)\n",
-    "    # Implement\n",
-    "    content = self.content\n",
-    "    if name in content:\n",
-    "        return content[name], 200, 'success', 'OK'\n",
-    "    else:\n",
-    "        return {}, 400, 'success', 'OK'"
+    "# import httpx, asyncio, datetime\n",
+    "# async def request_async():\n",
+    "#     async with httpx.AsyncClient() as client:\n",
+    "#         print(datetime.datetime.now().isoformat())\n",
+    "#         r = await client.post(url=f'{BASE_URL}/models',\n",
+    "#                             cookies=cookies,\n",
+    "#                             json={'project_name': 'rasa_bot'})\n",
+    "#     return r.text\n",
+    "\n",
+    "# await asyncio.gather(request_async(),request_async())\n",
+    "# await request_async()"
    ]
   }
  ],
