--- a/test/rpi.ipynb
+++ b/test/rpi.ipynb
@@ -38,6 +38,55 @@
     "    print(\"Cleanup\")\n",
     "    GPIO.cleanup()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import RPi.GPIO as GPIO\n",
+    "GPIO.setwarnings(False)\n",
+    "GPIO.setmode(GPIO.BCM)\n",
+    "\n",
+    "relay_ch = 23\n",
+    "\n",
+    "GPIO.setup(relay_ch, GPIO.OUT)\n",
+    "GPIO.output(relay_ch, GPIO.HIGH)\n",
+    "time.sleep(1)\n",
+    "GPIO.output(relay_ch, GPIO.LOW)\n",
+    "time.sleep(1)\n",
+    "GPIO.cleanup()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "BASE_URL = 'http://localhost:5055/webhook/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "j = {\n",
+    "    \"next_action\": \"action_hello_world\",\n",
+    "    \"tracker\": {\n",
+    "        \"sender_id\": \"1\",\n",
+    "        \"conversation_id\": \"default\"\n",
+    "    }\n",
+    "}\n",
+    "r_post = requests.post(url=BASE_URL,\n",
+    "                       json=j)\n",
+    "print(r_post.json())\n"
+   ]
   }
  ],
  "metadata": {
