--- a/test/story.ipynb
+++ b/test/story.ipynb
@@ -9,9 +9,11 @@
     "import json\n",
     "\n",
     "with open('/home/pi/git/asar/api/data/asar_projects/rasa_bot/stories.json', 'r', encoding=\"utf-8\") as f:\n",
-    "    f_json = json.load(f)\n",
-    "    \n",
-    "# f_json={'心情問答2':f_json['心情問答']}"
+    "    stories_json = json.load(f)\n",
+    "with open('/home/pi/git/asar/api/data/asar_projects/rasa_bot/rules.json', 'r', encoding=\"utf-8\") as f:\n",
+    "    rules_json = json.load(f)\n",
+    "\n",
+    "# f_json={'心情問答2':f_json['心情問答']}\n"
    ]
   },
   {
@@ -63,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def decode_story(story_name: str, input_nodes: dict, input_paths: list) -> list:\n",
+    "def decode_story(story_name: str, input_nodes: dict, input_paths: list, rule_mode: bool = False) -> list:\n",
     "    ret = []\n",
     "    for subpath_cnt, path in enumerate(input_paths):\n",
     "        steps = []\n",
@@ -106,9 +108,49 @@
     "                                    slots.append(k)\n",
     "                        if slots:\n",
     "                            step = {step_type: slots}\n",
+    "                elif step_type == 'form':\n",
+    "                    step = {'action': f'{input_nodes[node][\"name\"]}_form'}\n",
+    "                elif step_type == 'active_loop':\n",
+    "                    if n := input_nodes[node].get('name'):\n",
+    "                        step = {'active_loop': f'{n}_form'}\n",
+    "                    else:\n",
+    "                        step = {'active_loop': None}\n",
     "            if step:\n",
     "                steps.append(step)\n",
-    "        ret.append({'story': f'{story_name}_{subpath_cnt}', 'steps': steps})\n",
+    "                \n",
+    "        if rule_mode:\n",
+    "            rule = {'rule': f'{story_name}_{subpath_cnt}'}\n",
+    "            rule.update(\n",
+    "                {'conversation_start': input_nodes['start'].get('conversation_start', False)})\n",
+    "            rule.update(\n",
+    "                {'wait_for_user_input': input_nodes['start'].get('wait_for_user_input', True)})\n",
+    "\n",
+    "            condition = []\n",
+    "            if conditions := input_nodes['start'].get('condition'):\n",
+    "                c:dict\n",
+    "                for c in conditions:\n",
+    "                    c_type = c['type']\n",
+    "                    if c_type == 'slot_was_set':\n",
+    "                        slots = []\n",
+    "                        if k := c.get('slot'):\n",
+    "                            if 'value' in c:\n",
+    "                                v = c.get('value')\n",
+    "                                slots.append({k: v})\n",
+    "                            else:\n",
+    "                                slots.append(k)\n",
+    "                        if slots:\n",
+    "                            condition.append({c_type: slots})\n",
+    "                    elif c_type == 'active_loop':\n",
+    "                        if v := c.get('value'):\n",
+    "                            condition.append({c_type: f'{v}_form'})\n",
+    "                        else:\n",
+    "                            condition.append({c_type: None})\n",
+    "            rule.update({'condition': condition})\n",
+    "            rule.update({'steps': steps})\n",
+    "            ret.append(rule)\n",
+    "        else:\n",
+    "            ret.append(\n",
+    "                {'story': f'{story_name}_{subpath_cnt}', 'steps': steps})\n",
     "\n",
     "    return ret\n"
    ]
@@ -119,16 +161,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compile_stories(vueflow_stories: dict) -> dict:\n",
+    "def compile_stories(vueflow_stories: dict, rule_mode: bool = False) -> dict:\n",
     "    stories = []\n",
     "    for story_name, vueflow in vueflow_stories.items():\n",
     "        if vueflow:\n",
     "            story_nodes = decode_story_nodes(vueflow)\n",
     "            story_paths = decode_story_paths(story_nodes)\n",
-    "            decoded_story = decode_story(story_name, story_nodes, story_paths)\n",
+    "            decoded_story = decode_story(\n",
+    "                story_name, story_nodes, story_paths, rule_mode)\n",
     "            if decoded_story:\n",
     "                stories += decoded_story\n",
-    "    return {'stories': stories}\n"
+    "    if rule_mode:\n",
+    "        return {'rules': stories}\n",
+    "    else:\n",
+    "        return {'stories': stories}\n"
    ]
   },
   {
@@ -140,9 +186,12 @@
     "from ruamel.yaml import YAML\n",
     "import sys\n",
     "\n",
-    "compiled_stories = compile_stories(f_json)\n",
+    "compiled_stories = compile_stories(stories_json)\n",
     "yaml = YAML()\n",
-    "yaml.dump(compiled_stories, sys.stdout)\n"
+    "yaml.dump(compiled_stories, sys.stdout)\n",
+    "\n",
+    "compiled_rules = compile_stories(rules_json, True)\n",
+    "yaml.dump(compiled_rules, sys.stdout)\n"
    ]
   }
  ],
