--- a/test/rpi.ipynb
+++ b/test/rpi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,35 @@
     "GPIO.output(relay_ch, GPIO.LOW)\n",
     "time.sleep(1)\n",
     "GPIO.cleanup()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import RPi.GPIO as GPIO\n",
+    "\n",
+    "GPIO.setwarnings(False)\n",
+    "\n",
+    "# RPi pin mode = BCM\n",
+    "\n",
+    "GPIO.setmode(GPIO.BCM)\n",
+    "\n",
+    "GPIO.setup(13, GPIO.OUT)\n",
+    "\n",
+    "GPIO.setup(19, GPIO.OUT)\n",
+    "\n",
+    "GPIO.setup(26, GPIO.OUT)\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    GPIO.output(13, GPIO.HIGH)\n",
+    "    GPIO.output(19, GPIO.HIGH)\n",
+    "    GPIO.output(26, GPIO.HIGH)\n",
+    "except Exception as e:\n",
+    "    print(e)\n"
    ]
   },
   {
