--- a/test/rpi.ipynb
+++ b/test/rpi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,8 @@
     "    GPIO.output(19, GPIO.HIGH)\n",
     "    GPIO.output(26, GPIO.HIGH)\n",
     "except Exception as e:\n",
-    "    print(e)\n"
+    "    print(e)\n",
+    "GPIO.cleanup()"
    ]
   },
   {
