--- a/test/rpi.ipynb
+++ b/test/rpi.ipynb
@@ -22,7 +22,7 @@
     "import dht11\n",
     "import time\n",
     "\n",
-    "GPIO.setwarnings(True)\n",
+    "GPIO.setwarnings(False)\n",
     "GPIO.setmode(GPIO.BCM)\n",
     "\n",
     "instance = dht11.DHT11(pin=24)\n",
