decode slot_was_set

--- a/test/story.ipynb
+++ b/test/story.ipynb
@@ -65,6 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ast\n",
+    "\n",
     "def decode_story(story_name: str, input_nodes: dict, input_paths: list, rule_mode: bool = False) -> list:\n",
     "    ret = []\n",
     "    for subpath_cnt, path in enumerate(input_paths):\n",
@@ -102,7 +104,11 @@
     "                        for s in ss:\n",
     "                            if k := s.get('slot'):\n",
     "                                if 'value' in s:\n",
-    "                                    v = s.get('value')\n",
+    "                                    raw_v = s.get('value')\n",
+    "                                    try:\n",
+    "                                        v = ast.literal_eval(raw_v)\n",
+    "                                    except:\n",
+    "                                        v = s.get(raw_v)\n",
     "                                    slots.append({k: v})\n",
     "                                else:\n",
     "                                    slots.append(k)\n",
@@ -134,7 +140,11 @@
     "                        slots = []\n",
     "                        if k := c.get('slot'):\n",
     "                            if 'value' in c:\n",
-    "                                v = c.get('value')\n",
+    "                                raw_v = s.get('value')\n",
+    "                                try:\n",
+    "                                    v = ast.literal_eval(raw_v)\n",
+    "                                except:\n",
+    "                                    v = s.get(raw_v)\n",
     "                                slots.append({k: v})\n",
     "                            else:\n",
     "                                slots.append(k)\n",
